--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+python-django-formtools (1.0-2pexip1) pexip; urgency=low
+
+  * Prepare Pexip packaging
+
+ -- Colin Bradbury <colin@pexip.com>  Wed, 02 Dec 2015 15:39:23 +0000
+
 python-django-formtools (1.0-2) unstable; urgency=medium
 
   * Fix FTBFS with Python 3 (Closes: #803705).
