--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+python-django-formtools (2.0-1pexip2) pexip; urgency=medium
+
+  * Bump version number for override update
+
+ -- Vincent Sanders <vince@pexip.com>  Fri, 17 May 2019 09:57:48 +0100
+
 python-django-formtools (2.0-1pexip1) pexip; urgency=medium
 
   * New upstream release
