--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+python-django-formtools (2.2-2pexip1) pexip; urgency=medium
+
+  * Migrate to django-formtools 2.2
+
+ -- Huw Jones <huw@pexip.com>  Tue, 25 Jan 2022 11:33:31 +0000
+
 python-django-formtools (2.2-2) unstable; urgency=medium
 
   * Uploading to unstable.
