--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+python-django-formtools (2.2-2pexip2) pexip; urgency=medium
+
+  * Initial bullseye build
+
+ -- Mark Hymers <mark.hymers@pexip.com>  Thu, 02 Jun 2022 14:42:47 +0100
+
 python-django-formtools (2.2-2pexip1) pexip; urgency=medium
 
   * Migrate to django-formtools 2.2
