Main bullseye build

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+python-django-formtools (2.2-2pexip3) pexip-bullseye; urgency=medium
+
+  * Main bullseye build
+
+ -- Mark Hymers <mark.hymers@pexip.com>  Fri, 24 Jun 2022 14:04:24 +0100
+
 python-django-formtools (2.2-2pexip2) pexip; urgency=medium
 
   * Initial bullseye build
