--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+python-django-formtools (2.3-3pexip1) pexip-bookworm; urgency=medium
+
+  * Initial bookworm build
+
+ -- Mark Hymers <mark.hymers@pexip.com>  Thu, 16 Nov 2023 10:23:14 +0000
+
 python-django-formtools (2.3-3) unstable; urgency=medium
 
   * Use /usr/bin/django-admin instead of django-admin.py. (Closes: #1013605).
