--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+python-django-formtools (2.3-3pexip2) pexip-bookworm; urgency=medium
+
+  * Bookworm build for product distribution
+
+ -- Mark Hymers <mark.hymers@pexip.com>  Sat, 09 Dec 2023 22:57:25 +0000
+
 python-django-formtools (2.3-3pexip1) pexip-bookworm; urgency=medium
 
   * Initial bookworm build
