--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+python-django-formtools (2.3-3+pexip24u3) pexip-bookworm; urgency=medium
+
+  * New versioning scheme
+
+ -- Mark Hymers <mark.hymers@pexip.com>  Thu, 01 Feb 2024 16:21:49 +0000
+
 python-django-formtools (2.3-3pexip2) pexip-bookworm; urgency=medium
 
   * Bookworm build for product distribution
